# heteroscedasticity-aware-fl-for-network-optimization

./: LICENSE  README.md
jupyter/: describe_experiments.ipynb
jupyter/data-prep/: README.md  prep_clean.ipynb  prep_data.ipynb  prep_noise.ipynb
jupyter/deploy-hub/: README.md  extra-notebook-profiles.yaml  torch_flwr-requirements.txt  torch_flwr.Dockerfile
k8s/: batch_deploy_fairfl.py  deploy_fairfl.py
k8s/deployment/: fairfl_client.yaml  fairfl_server.yaml
k8s/docker/: fairfl-cpu.Dockerfile  update_container.py
simulation/bike_het/nsr_0.1/: seed_0.json  seed_1.json  seed_10.json  seed_2.json  seed_3.json  seed_4.json  seed_5.json  seed_6.json  seed_7.json  seed_8.json  seed_9.json
simulation/bike_het/nsr_0.2/: seed_0.json  seed_1.json  seed_10.json  seed_2.json  seed_3.json  seed_4.json  seed_5.json  seed_6.json  seed_7.json  seed_8.json  seed_9.json
simulation/bike_het/nsr_0.5/: seed_0.json  seed_1.json  seed_10.json  seed_2.json  seed_3.json  seed_4.json  seed_5.json  seed_6.json  seed_7.json  seed_8.json  seed_9.json
simulation/bike_het/nsr_1.0/: seed_0.json  seed_1.json  seed_10.json  seed_2.json  seed_3.json  seed_4.json  seed_5.json  seed_6.json  seed_7.json  seed_8.json  seed_9.json
simulation/bike_hom/nsr_0.1/: seed_0.json  seed_1.json  seed_10.json  seed_2.json  seed_3.json  seed_4.json  seed_5.json  seed_6.json  (+3 more)
src/: pyproject.toml  run_client.py  run_server.py
src/algorithms/fedha/: client.py  model.py  server.py  strategy.py
src/algorithms/fedhaf/: client.py  model.py  server.py  strategy.py
src/common/: data.py  utils.py
(+33 files in other folders)
